.provarCaches/00D5h000009Q6XQEA0/objects/provar__Metadata_Component_Test_Case__c.object
<CustomObject>
    <fields>
        <fullName>provar__Metadata_Component__c</fullName>
        <label>Metadata Component</label>
        <referenceTo>provar__Metadata_Component__c</referenceTo>
        <relationshipLabel>Related Test Cases</relationshipLabel>
        <relationshipName>Metadata_Component_Test_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Case_Automation_Tool__c</fullName>
        <formula>TEXT(provar__Test_Case__r.provar__Test_Automation_Tool__c)</formula>
        <label>Test Case Automation Tool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Test_Case_Is_Automated__c</fullName>
        <formula>provar__Test_Case__r.provar__Is_Automated__c</formula>
        <label>Test Case Is Automated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Test_Case_Status__c</fullName>
        <formula>TEXT( provar__Test_Case__r.provar__Status__c )</formula>
        <label>Test Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Test_Case__c</fullName>
        <label>Test Case</label>
        <referenceTo>provar__Test_Case__c</referenceTo>
        <relationshipLabel>Covered Metadata Components</relationshipLabel>
        <relationshipName>Metadata_Component_Test_Cases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Metadata Component Test Case</label>
    <nameField>
        <displayFormat>MCTC-{000000}</displayFormat>
        <label>Metadata Component Test Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Component Test Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>